--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -2,12 +2,13 @@ name: Deploy App
 author: TIBCO Software
 description: Workflow to deploy the App in all environment.
   
-on: workflow_dispatch
-  inputs:
-    environment:
-      description: 'Environment to deploy'
-      required: true
-      default: 'dev/sit/uat/prod'
+on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        default: 'dev/sit/uat/prod'
 #outputs:
 #  time:
 #   description: 'the greeting time'
