--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -1,7 +1,5 @@
 name: 'Deploy App'
-description: 'Workflow to deploy the App in all environment.'
-author: 'TIBCO Software'
-
+#This Workflow is to deploy the App.
   
 on:
   workflow_dispatch:
