--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -1,5 +1,6 @@
 name: 'Deploy App'
-#This Workflow is to deploy the App.
+#description: 'Workflow to deploy the App in all environment.'
+#author: 'TIBCO Software'
   
 on:
   workflow_dispatch:
