--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -8,7 +8,7 @@ on:
       environment:
         description: 'Environment to deploy'
         required: true
-        default: 'dev/sit/uat/prod'
+        default: 'dev|sit|uat|prod'
 #outputs:
 #  time:
 #   description: 'the greeting time'
@@ -17,9 +17,27 @@ env:
   WF_ENV: workflow env variable
   
 jobs:
-  build:
+  set-variables:
     runs-on: ubuntu-latest
     steps:
+      - name: Create variables JSON
+        id: variables
+        uses: ./.github/actions/setvars
+        with:
+          path: ./.github/variables/application.env
+      - name: Print
+        run: |
+          echo "Variable 1: ${{ env.APPLICATION }}"
+          echo "Variable 2: ${{ env.ENVIRONMENT }}"
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [set-variables]
+    steps:
+      - name: SonarQube Code Analysis
+        run : |
+          echo "Variable 1: ${{ env.APPLICATION }}"
+          echo "Variable 2: ${{ env.ENVIRONMENT }}"          
       - name: maven build
         run : |
           echo $OC_SERVER
@@ -29,17 +47,10 @@ jobs:
           OC_SERVER: ${{ secrets.OC_SERVER }}
           SONAR_SERVER: ${{ secrets.SONAR_SERVER }}
 
-  code-analysis:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name : Sonar Analysis
-        run: echo "Code Analysis completed"
-
   deploy-dev:
     runs-on: ubuntu-latest
     environment: dev
-    needs: [code-analysis]
+    needs: [build]
     if: ${{ github.event.inputs.environment == 'dev' }}
     steps:
       - name : deploy to dev
@@ -52,7 +63,7 @@ jobs:
   deploy-sit:
     runs-on: ubuntu-latest
     environment: sit
-    needs: [code-analysis]
+    needs: [build]
     if: ${{ github.event.inputs.environment == 'sit' }}
     steps:
       - name : deploy to sit
@@ -61,7 +72,7 @@ jobs:
   deploy-uat:
     runs-on: ubuntu-latest
     environment: uat
-    needs: [code-analysis]
+    needs: [build]
     if: ${{ github.event.inputs.environment == 'uat' }}
     steps:
       - name : deploy to uat
@@ -71,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.environment == 'prod' }}
     environment: production
-    needs: [code-analysis]
+    needs: [build]
     steps:
       - name : deploy to prod
         run: echo "Deploy to prod completed"
