--- a/.github/actions/setvars/action.yml
+++ b/.github/actions/setvars/action.yml
@@ -1,15 +1,24 @@
-name: Set Environment Variables
-description: This action will read the .env file and add variables to GITHUB_ENV
-#Taken from https://github.com/xom9ikk/dotenv
+name: 'Dotenv Action'
+description: 'Load variables from .env file'
+branding:
+  icon: play
+  color: green
 inputs:
-  path:
-    description: The path to the folder where the .env file is located
+  path:  # id of input
+    description: 'the path to the .env file (including file name)'
+    required: true
+    default: '.env'
+  log-variables:
+    description: 'whether to log the variables to output or not'
     required: false
-    default: './'
-  mode:
-    description: The mode for load the .env file
+    default: 'false'
+  mask-variables:
+    description: 'whether to mask the variables as secrets or not'
     required: false
-    default: ''
+    default: 'false'
+outputs:
+  generic: # output will be available to future steps 
+    description: 'This command will have generic output variables based on .env'
 runs:
-  using: node12
-  main: ./dist/index.js
+  using: 'node12'
+  main: 'dist/index.js'
