--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -26,7 +26,7 @@ jobs:
         id: variables
         uses: ./.github/actions/setvars
         with:
-          path: ./.github/variables
+          path: ./.github/variables/App.env
       - name: Print
         run: |
           echo "Variable 1: ${{ steps.variables.outputs.APPLICATION }}"
