--- a/.github/actions/setvars/action.yml
+++ b/.github/actions/setvars/action.yml
@@ -1,24 +1,14 @@
-name: 'Dotenv Action'
-description: 'Load variables from .env file'
-branding:
-  icon: play
-  color: green
+name: 'Set Environment Variables'
+description: 'Load Environment variables from .env file'
+
 inputs:
-  path:  # id of input
+  path: 
     description: 'the path to the .env file (including file name)'
     required: true
-    default: '.env'
-  log-variables:
-    description: 'whether to log the variables to output or not'
-    required: false
-    default: 'false'
-  mask-variables:
-    description: 'whether to mask the variables as secrets or not'
-    required: false
-    default: 'false'
+    default: './.github/variables/application.env'
 outputs:
-  generic: # output will be available to future steps 
-    description: 'This command will have generic output variables based on .env'
+  env: 
+    description: 'output in json format, Enable ACTIONS_STEP_DEBUG to true to log the env variables'
 runs:
   using: 'node12'
   main: 'dist/index.js'
