--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -25,6 +25,7 @@ jobs:
       - name: validate
         if: ${{ github.event.inputs.environment != 'dev' || github.event.inputs.environment != 'sit' || github.event.inputs.environment != 'uat' || github.event.inputs.environment != 'prod' }}
         run: |
+          echo "You have enetered incorrect environment : ${{ github.event.inputs.environment }}"
           echo "Please provide the correct environment to deploy : dev|sit|uat|prod"
           exit 1
       - name: Checkout
