--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -30,12 +30,15 @@ jobs:
         with:
           path: ./.github/variables/application.env
       - name: validate
-        if: |
-          github.event.inputs.environment != 'dev' || github.event.inputs.environment != 'sit' || github.event.inputs.environment != 'uat' || github.event.inputs.environment != 'prod'
         run: |
-          echo "You have enetered incorrect environment : ${{ github.event.inputs.environment }}"
-          echo "Please provide the correct environment to deploy : dev|sit|uat|prod"
-          exit 1
+          if [ ${{ github.event.inputs.environment }} = "dev" ] || [ ${{ github.event.inputs.environment }} = "sit" ] || [ ${{ github.event.inputs.environment }} = "uat" ] || [ ${{ github.event.inputs.environment }} = "prod" ]
+          then
+            echo "You are deploying to : ${{ github.event.inputs.environment }}"
+          else
+            echo "You have enetered incorrect environment : ${{ github.event.inputs.environment }}"
+            echo "Please provide the correct environment to deploy : dev|sit|uat|prod"
+            exit 1
+fi
   build:
     runs-on: ubuntu-latest
     needs: [set-variables]
