--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -66,7 +66,8 @@ jobs:
     steps:
       - name : deploy
         run: |
-          echo $OC_PROJECT       
+          echo $OC_PROJECT 
+          echo "Variable 1: ${{ env.application }}"
           echo "Deploy to ${{ github.event.inputs.environment }} completed"
         env:
           OC_PROJECT: ${{ secrets.OC_PROJECT }}
