--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -66,7 +66,7 @@ jobs:
           echo "Completed the sonarqube analysis"
       - name: maven build
         run : |
-          echo ${{ env.project_$SUB }}
+          echo ${{ env[project_$SUB] }}
           echo $SONAR_SERVER
           echo "Build completed"        
         env:
