--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -43,7 +43,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [set-variables]
-    env: ${{ fromJSON(needs.set-variables.outputs.vars) }}
+    env: 
+      vars: ${{ needs.set-variables.outputs.vars }}
     steps:
       - name: Checkout Common
         uses: actions/checkout@v2
@@ -54,25 +55,16 @@ jobs:
           token: ${{ secrets.TOK }}
       - name: SonarQube Code Analysis
         run : |
-          pwd
-          cd /home/runner/work
-          ls -al
-          cd /home/runner/work/Actions_Test
-          ls -al
-          cd /home/runner/work/Actions_Test/Actions_Test
-          ls -al
-          echo "Variable 1: ${{ env.application }}"
-          echo "Variable 2: ${{ env.environment }}" 
+          echo "Variable 1: ${{ fromJSON(env.vars).application }}"
+          echo "Variable 2: ${{ fromJSON(env.vars).environment }}" 
           echo "Completed the sonarqube analysis"
       - name: maven build
         run : |
-          echo ${{ env[${{ SUB }} }}
-          echo $SONAR_SERVER
           echo "Build completed"        
         env:
           OC_SERVER: ${{ secrets.OC_SERVER }}
           SONAR_SERVER: ${{ secrets.SONAR_SERVER }}
-          SUB: PROJECT_DEV
+          SUB: DEV
 
   deploy:
     runs-on: ubuntu-latest
