--- a/.github/variables/application.env
+++ b/.github/variables/application.env
@@ -1,3 +1,6 @@
 APPLICATION=Test_App
 ENVIRONMENT=Test
 PROJECT_DEV=devproject
+PROJECT_SIT=sitproject
+PROJECT_UAT=uatproject
+PROJECT_PROD=prodproject
