--- a/.github/workflows/Deploy_App.yml
+++ b/.github/workflows/Deploy_App.yml
@@ -40,6 +40,14 @@ jobs:
           echo "Please provide the correct environment to deploy : dev|sit|uat|prod"
           exit 1
           fi
+      - name: set env specific variables
+        run: |
+          echo "project=devproject" >> $GITHUB_ENV
+      - name: set env specific variables
+        run: |
+          echo "${{ env.project }}"
+
+      
   build:
     runs-on: ubuntu-latest
     needs: [set-variables]
@@ -57,6 +65,7 @@ jobs:
         run : |
           echo "Variable 1: ${{ fromJSON(env.vars).application }}"
           echo "Variable 2: ${{ fromJSON(env.vars).environment }}" 
+          echo "${{ env.project }}"
           echo "Completed the sonarqube analysis"
       - name: maven build
         run : |
